[package]
name = "eq3-max-cube_rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["eq3", "max", "cube", "smarthome"]
description = "an rust implmentation for operating MAX! Cube"
repository = "https://github.com/Kanksu/eq3-max-cube_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
base64 = { version = "0.22"}
log = {version = "0.4"}
async-std ={ version = "1"}
serde = {version="1", features=["derive"]}
